--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ author:
       # url: "mailto:your.name@email.com"
     - label: "LinkedIn"
       icon: "fas fa-fw fa-linkedin"
-      # url: "https://www.linkedin.com/in/jeff-ponce-8076b6b7/"
+      url: "https://www.linkedin.com/in/jeff-ponce-8076b6b7/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
@@ -113,7 +113,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/jeffponce"
+      url: "https://github.com/jeffponce"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
