--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ name                     : "Jeff Ponce"
 description              : "Data Science Portfolio"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "jeffponce/jeffponce.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -85,29 +85,24 @@ analytics:
 # Site Author
 author:
   name             : "Jeff Ponce"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : #"portrait.png"
   bio              : "Data Science Portfolio"
   location         : "Orlando, FL"
-  email            :
-  links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:your.name@email.com"
-    - label: "LinkedIn"
-      icon: "fas fa-fw fa-linkedin"
-      url: "https://www.linkedin.com/in/jeff-ponce-8076b6b7/"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/jeffponce"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+  employer         :
+  email            : "jeff.ponce121@gmail.com"
+  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  uri              :
+  bitbucket        :
+  codepen          :
+  dribbble         :
+  flickr           :
+  facebook         :
+  foursquare       :
+  github           : "jeffponce"
+  linkedin         : "https://www.linkedin.com/in/jeff-ponce-8076b6b7/"
+  stackoverflow    : 
+  youtube          :
+  wikipedia        : 
 
 # Site Footer
 footer:
@@ -270,13 +265,12 @@ defaults:
       comments: # true
       share: true
       related: true
-
 # _pages
-- scope:
-    path: ""
-    type: pages
-  values:
-    layout: single
-    author_profile: true
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
     
     
