--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   facebook         :
   foursquare       :
   github           : "jeffponce"
-  linkedin         : "https://www.linkedin.com/in/jeff-ponce-8076b6b7/"
+  linkedin         : jeff-ponce-8076b6b7/
   stackoverflow    : 
   youtube          :
   wikipedia        : 
