--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ analytics:
 # Site Author
 author:
   name             : "Jeff Ponce"
-  avatar           : #"portrait.png"
+  avatar           : "/images/front.JPG"
   bio              : "Data Science Portfolio"
   location         : "Orlando, FL"
   employer         :
